// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@checkup/cli cli error cases should error if the config is malformed 1`] = `
"Checkup configuration is malformed:
plugins expected type Array<string>, but got undefined
tasks.someTask.isEnabled expected type boolean, but got \\"foo\\""
`;

exports[`@checkup/cli normal cli output with plugins should output checkup result 1`] = `
"mock task is being run
mock task2 is being run
mock task3 is being run
"
`;

exports[`@checkup/cli normal cli output with plugins should output checkup result in JSON 1`] = `
"{
  \\"mockTask\\": 15,
  \\"mockTask2\\": 10
}
"
`;

exports[`@checkup/cli normal cli output with plugins should run a single task if the task option is specified 1`] = `
"mock task is being run
"
`;

exports[`@checkup/cli normal cli output with plugins should use the config at the config path if provided 1`] = `
"mock task is being run
mock task2 is being run
"
`;
